core server v1.3 sources