@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-$Id: build.xml,v 1.24.2.2 2007/11/02 16:43:10 rk903 Exp $
+$Id: build.xml,v 1.36 2008/09/26 17:00:02 rk903 Exp $
 -->
 <project name="QueryProcessor" basedir="." default="dist">
 
 	<property name="Name" value="QueryProcessor" />
 	<import file="../edu.harvard.i2b2.common/common_build.xml" />
 	<property environment="env" />
-
+	<!-- uploader project path -->
+	<property name="crcUploaderProject"    value="edu.harvard.i2b2.crc.loader" />
+	
 	<!-- OTHER SETTINGS -->
-	<property name="javac.debug" value="true" />
-	<property name="javac.opt" value="false" />
 	<property name="ejbspec" value="2.0" />
 	<property name="jboss.version" value="4.0" />
 
@@ -27,6 +27,8 @@ $Id: build.xml,v 1.24.2.2 2007/11/02 16:43:10 rk903 Exp $
 			<fileset dir="${genlib}">
 				<include name="*.jar" />
 			</fileset>
+			<!-- uploader webservice class path --> 
+			<pathelement location="../${crcUploaderProject}/classes" />
 			<pathelement location="${classes}" />
 			<pathelement location="../${i2b2CommonProject}/dist/i2b2Common-core.jar" />
 		</path>
@@ -44,27 +46,23 @@ $Id: build.xml,v 1.24.2.2 2007/11/02 16:43:10 rk903 Exp $
 
 		<xjc extension="true" destdir="${gensrc}" removeOldOutput="no">
 			<schema dir="../${i2b2xmlproject}/xsd/hive/pdo_1.1" includes="i2b2_PDO.xsd" />
-			<schema dir="../${i2b2xmlproject}/xsd/hive/msg_1.1" includes="i2b2_response.xsd" />
 			<schema dir="../${i2b2xmlproject}/xsd/cell/crc/pdo_1.1" includes="CRC_PDO_QRY.xsd" />
+			<schema dir="../${i2b2xmlproject}/xsd/hive/msg_1.1" includes="i2b2_response.xsd" />
+			<schema dir="../${i2b2xmlproject}/xsd/hive/msg_1.1" includes="i2b2_result_msg.xsd" />
 			<schema dir="../${i2b2xmlproject}/xsd/cell/crc/psm_1.1" includes="CRC_PSM_QRY.xsd" />
 			<schema dir="../${i2b2xmlproject}/xsd/cell/crc/psm_1.1" includes="CRC_PSM_QRY_query_definition.xsd" />
 			<schema dir="../${i2b2xmlproject}/xsd/cell/pm_1.1" includes="PM_USER.xsd" />
-			<binding dir="." includes="etc/xsd/i2b2_pdo.xjb" />
+			<schema dir="../${i2b2xmlproject}/xsd/cell/ont_1.1" includes="ONT_QRY.xsd" />
+			<schema dir="../${i2b2xmlproject}/xsd/cell/ont_1.1" includes="ONT_RESP.xsd" />
 			<binding dir="." includes="etc/xsd/i2b2_response.xjb" />
-			<binding dir="." includes="etc/xsd/crc_pdo_qry.xjb" />
 			<binding dir="." includes="etc/xsd/crc_psm_qry.xjb" />
 			<binding dir="." includes="etc/xsd/crc_psm_querydefinition.xjb" />
 			<binding dir="." includes="etc/xsd/i2b2_pm_bindings.xjb" />
+			<binding dir="." includes="etc/xsd/crc_ontology_bindings.xjb" />
+			<binding dir="." includes="etc/xsd/crc_hive_result.xjb" />
+			<binding dir="." includes="etc/xsd/i2b2_pdo.xjb" />
+			<binding dir="." includes="etc/xsd/crc_pdo_qry.xjb" />
 		</xjc>
-
-		<!--
-		 <java dir="." jar="../edu.harvard.i2b2.common/lib/jaxb/jaxb-xjc.jar" fork="true" failonerror="true" >
-		 	<arg line="-quiet -nv -extension ../edu.harvard.i2b2.xml/xsd/hive/pdo_1.1/i2b2_PDO.xsd -b etc/xsd/i2b2_pdo.xjb 
-		 		-d ${gensrc}"/>
-            <jvmarg value="-Djava.endorsed.dirs=../edu.harvard.i2b2.common/lib/jaxb" />
-            <classpath refid="classpath"/>
-		  </java>
-		 -->
 	</target>
 
 
@@ -92,21 +90,6 @@ $Id: build.xml,v 1.24.2.2 2007/11/02 16:43:10 rk903 Exp $
 		</javac>
 	</target>
 
-	<!-- =================================================================== -->
-	<!-- 								GENERATE XML & POJO from schema 	 -->
-	<!-- =================================================================== -->
-	<target name="generate-hbm" depends="init">
-		<taskdef name="hibernatetool" classname="org.hibernate.tool.ant.HibernateToolTask" classpathref="classpath" />
-		<hibernatetool destdir="gensrc">
-			<jdbcconfiguration packagename="edu.harvard.i2b2.crc.datavo.querytool" propertyfile="${etc}/hibernate.properties" revengfile="${etc}/hibernate2.reveng.xml" />
-			<hbm2hbmxml destdir="gensrc" />
-			<hbm2java jdk5="true" />
-			<hbm2cfgxml ejb3="true" />
-		</hibernatetool>
-	</target>
-
-
-
 
 	<!-- =================================================================== -->
 	<!-- 								DIST 								 -->
@@ -119,15 +102,21 @@ $Id: build.xml,v 1.24.2.2 2007/11/02 16:43:10 rk903 Exp $
 				<exclude name="edu/harvard/i2b2/crc/axis2/**/**" />
 				<exclude name="edu/harvard/i2b2/crc/delegate/**" />
 			</fileset>
+			<fileset dir="${classes}">
+				<include name="edu/harvard/i2b2/crc/delegate/ontology/**" />
+			</fileset>
 			<zipfileset dir="${gensrc}" prefix="META-INF" includes="ejb-jar.xml" />
 			<zipfileset dir="${etc}/jboss" prefix="META-INF" includes="jboss.xml" />
-			<zipfileset dir="../${i2b2CommonProject}/dist/" prefix="lib" includes="*.jar"/>
+			<zipfileset dir="../${i2b2CommonProject}/dist/" prefix="lib" includes="*.jar" />
+			<zipfileset dir="../${i2b2CommonProject}/lib/axis2-1.1" prefix="lib" includes="*.jar" />
 		</jar>
 
 		<antcall target="dist-server" />
 		<antcall target="axis2aar" />
 		<antcall target="dist-client" />
+		<!--
 		<antcall target="hibernate-har" />
+		-->
 
 	</target>
 
@@ -157,40 +146,6 @@ $Id: build.xml,v 1.24.2.2 2007/11/02 16:43:10 rk903 Exp $
 	</target>
 
 
-	<!-- =================================================================== -->
-	<!-- 								HIBERNATE HAR FILE 					 -->
-	<!-- =================================================================== -->
-	<target name="hibernate-har">
-		<jar destfile="${dist}/${Name}.har">
-			<!-- Get the generated hbm.xml files -->
-			<fileset dir="${etc}/hibernate">
-				<include name="**/*.hbm.xml" />
-			</fileset>
-
-			<!-- Get the hibernate class files -->
-			<fileset dir="${classes}">
-				<include name="edu/harvard/i2b2/crc/datavo/db/**/*.class" />
-			</fileset>
-
-			<fileset dir="${lib}">
-				<include name="cglib2.1.3.jar" />
-				<include name="commons-collections.jar" />
-				<include name="commons-logging-1.0.4.jar" />
-				<include name="dom4j01.6.1.jar" />
-				<include name="hibernate3.jar" />
-				<include name="ehcache-1.1.jar" />
-				<!-- 
-					<include name="odmg.jar"/>
-					<include name="ehcache-1.1.jar"/>
-				-->
-			</fileset>
-
-			<metainf dir="${etc}/jboss">
-				<include name="hibernate-service.xml" />
-				<include name="ehcache.xml" />
-			</metainf>
-		</jar>
-	</target>
 
 
 	<!-- =================================================================== -->
@@ -198,7 +153,7 @@ $Id: build.xml,v 1.24.2.2 2007/11/02 16:43:10 rk903 Exp $
 	<!-- =================================================================== -->
 	<target name="generate-ejb" depends="init">
 		<taskdef name="xdoclet" classname="org.xdoclet.ant.XDocletTask" classpathref="classpath" />
-		<xdoclet>
+		<xdoclet  verbose="false">
 			<fileset dir="src/server">
 				<include name="edu/harvard/i2b2/crc/ejb/*.java" />
 			</fileset>
@@ -222,9 +177,16 @@ $Id: build.xml,v 1.24.2.2 2007/11/02 16:43:10 rk903 Exp $
 				<include name="edu/harvard/i2b2/crc/delegate/**" />
 				<exclude name="edu/harvard/i2b2/crc/axis2/*Client.**" />
 			</fileset>
+			<!-- added to support loader in one service --> 
+			<fileset dir="../edu.harvard.i2b2.crc.loader/${classes}">
+				<include name="edu/harvard/i2b2/crc/loader/ws/**" />
+				<include name="edu/harvard/i2b2/crc/loader/delegate/**" />
+				<exclude name="edu/harvard/i2b2/crc/loader/delegage/fr/**"/>
+			</fileset>
+			<!-- end -->
 			<zipfileset dir="src/server/edu/harvard/i2b2/crc/axis2/META-INF" prefix="META-INF" includes="services.xml" />
-			<zipfileset dir="../${i2b2CommonProject}/dist/" prefix="lib" includes="*.jar"/>
-						
+			<zipfileset dir="../${i2b2CommonProject}/dist/" prefix="lib" includes="*.jar" />
+
 		</jar>
 	</target>
 
@@ -233,6 +195,16 @@ $Id: build.xml,v 1.24.2.2 2007/11/02 16:43:10 rk903 Exp $
 	<!-- 							DEPLOYMENT 								 -->
 	<!-- =================================================================== -->
 	<target name="deploy" description="Deployment step:copy distribution jar files to app server">
+		<!-- deploy application's property file and Spring xml file -->
+		<antcall target="property_deploy" />
+		<!-- deploy service -->
+		<antcall target="service_deploy" />
+		<!-- deploy datasources and jms persistance files to jboss -->
+		<antcall target="datasource_jmspersistance_deploy" />
+	</target>
+
+	<!-- copy deployment archive files to jboss -->
+	<target name="service_deploy">
 		<echo message="${Name}: Copying archive package to app server ${jboss.home}" />
 		<copy todir="${jboss.home}/server/default/deploy">
 			<fileset dir="${dist}">
@@ -240,20 +212,46 @@ $Id: build.xml,v 1.24.2.2 2007/11/02 16:43:10 rk903 Exp $
 				<exclude name="**/*client.jar" />
 			</fileset>
 		</copy>
-
+		<!-- copy axis archive files to axis directory -->
+		<copy todir="${jboss.home}/server/default/deploy/${axis2.war.name}/WEB-INF/services">
+			<fileset dir="${dist}">
+				<include name="**/**.aar" />
+			</fileset>
+		</copy>
+		<!-- deploy uploader service files --> 
+		<subant target="service_deploy">
+			<fileset dir="../${crcUploaderProject}" includes="build.xml" />
+		</subant>
+	</target>
+	
+	<!-- deploy property setting -->
+	<target name="property_deploy">
+		<echo message="copying property files to ${edu.harvard.i2b2.crc.applicationdir}" />
+		<copy todir="${edu.harvard.i2b2.crc.applicationdir}">
+			<fileset dir="${etc}/spring">
+				<exclude name="crc_application_directory.properties" />
+			</fileset>
+		</copy>
+		<!-- deploy uploader property files --> 
+		<subant target="property_deploy">
+			<fileset dir="../${crcUploaderProject}" includes="build.xml" />
+		</subant>
+	</target>
+	
+	<!-- deploy datasource and jms persistance setup files to jboss --> 
+	<target name="datasource_jmspersistance_deploy">
 		<copy todir="${jboss.home}/server/default/deploy">
 			<fileset dir="${etc}/jboss">
 				<exclude name="**/jboss.xml" />
-				<exclude name="**/ehcache.xml" />
-				<exclude name="**/hibernate-service.xml" />
 				<exclude name="**/crc-oracle-jdbc2-service.xml" />
+				<exclude name="**/crc-mssql-jdbc2-service.xml" />
 			</fileset>
 		</copy>
 
-		<!-- use oracle for jms queue -->
+		<!-- use oracle/mssql for jms queue -->
 		<copy todir="${jboss.home}/server/default/deploy/jms">
 			<fileset dir="${etc}/jboss">
-				<include name="**/crc-oracle-jdbc2-service.xml" />
+				<include name="**/crc-${jboss.jms.persistance}-jdbc2-service.xml" />
 			</fileset>
 		</copy>
 		<!-- remove default hsql persistance for jms queue -->
@@ -261,24 +259,15 @@ $Id: build.xml,v 1.24.2.2 2007/11/02 16:43:10 rk903 Exp $
 			<fileset dir="${jboss.home}/server/default/deploy/jms" includes="**/hsqldb-jdbc2-service.xml" />
 			<fileset dir="${jboss.home}/server/default/deploy" includes="**/hsqldb-ds.xml" />
 		</delete>
-
-		<!-- copy axis archive files to axis directory -->
-		<copy todir="${jboss.home}/server/default/deploy/${axis2.war.name}/WEB-INF/services">
-			<fileset dir="${dist}">
-				<include name="**/**.aar" />
-			</fileset>
-		</copy>
-
-		<echo message="copying property files to ${edu.harvard.i2b2.crc.applicationdir}" />
-		<copy todir="${edu.harvard.i2b2.crc.applicationdir}">
-			<fileset dir="${etc}/spring">
-				<exclude name="crc_application_directory.properties" />
-			</fileset>
-		</copy>
+		
+		<!-- deploy uploader queue files --> 
+		<subant target="datasource_deploy">
+			<fileset dir="../${crcUploaderProject}" includes="build.xml" />
+		</subant>
+		
 	</target>
-
-
-
+	
+	
 	<!-- =================================================================== -->
 	<!-- 			RUN JUNIT TESTS AND GENERATE REPORT			 			 -->
 	<!-- =================================================================== -->
@@ -288,7 +277,7 @@ $Id: build.xml,v 1.24.2.2 2007/11/02 16:43:10 rk903 Exp $
 		<!-- run the unit tests -->
 		<junit fork="yes" haltonfailure="no" maxmemory="512M" printsummary="on" errorProperty="test.failed" failureProperty="test.failed" showoutput="true">
 			<formatter type="xml" />
-			 <jvmarg value="-Dtestfiledir=${testfiledir}"/>
+			<jvmarg value="-Dtestfiledir=${testfiledir}" />
 			<!--<test name="AllTests" todir="${report.dir}"/>-->
 			<batchtest fork="yes" todir="${reports.dir}">
 				<fileset dir="${src}/test">
@@ -298,7 +287,7 @@ $Id: build.xml,v 1.24.2.2 2007/11/02 16:43:10 rk903 Exp $
 			</batchtest>
 			<classpath>
 				<path refid="classpath" />
-				<pathelement location="${etc}/spring"/>
+				<pathelement location="${etc}/spring" />
 			</classpath>
 		</junit>
 		<!-- create the junit test report -->
@@ -312,48 +301,7 @@ $Id: build.xml,v 1.24.2.2 2007/11/02 16:43:10 rk903 Exp $
 		<fail message="Tests failed." if="test.failed" />
 	</target>
 
-	<!-- =================================================================== -->
-	<!-- 			DATABASE SETUP TARGETS						 			 -->
-	<!-- =================================================================== -->
-	<target name="db_create_user" depends="init">
-		<sql driver="${db.driver}" url="${db.url}" userid="${db.username}" password="${db.password}" classpathref="classpath" onerror="continue" print="true">
-					CREATE USER  i2b2demodata IDENTIFIED BY   i2b2demodata;
-					CREATE USER  i2b2metadata IDENTIFIED BY   i2b2metadata;
-				</sql>
-	</target>
-
-	<target name="db_demodata_create_table" depends="init">
-		<sql driver="${db.driver}" url="${db.url}" userid="${db.username}" password="${db.password}" classpathref="classpath" onerror="continue" print="true">
-			<transaction src="${db.script.dir}/i2b2demodata_create.sql" />
-		</sql>
-	</target>
-
-	<target name="db_demodata_load_data" depends="init">
-		<sql driver="${db.driver}" url="${db.url}" userid="${db.username}" password="${db.password}" classpathref="classpath" onerror="continue" print="true">
-			<transaction src="${db.script.dir}/i2b2demodata_data.sql" />
-		</sql>
-	</target>
-
-	<target name="db_metadata_create_table" depends="init">
-		<sql driver="${db.driver}" url="${db.url}" userid="${db.username}" password="${db.password}" classpathref="classpath" onerror="continue" print="true">
-			<transaction src="${db.script.dir}/i2b2metadata_create.sql" />
-		</sql>
-	</target>
-
-	<target name="db_metadata_load_data" depends="init">
-		<sql driver="${db.driver}" url="${db.url}" userid="${db.username}" password="${db.password}" classpathref="classpath" onerror="continue" print="true">
-			<transaction src="${db.script.dir}/i2b2metadata_data.sql" />
-		</sql>
-	</target>
 	
-	<target name="db_grant_metadata" depends="init">
-			<sql driver="${db.driver}" url="${db.url}" userid="${db.username}" password="${db.password}" classpathref="classpath" onerror="continue" print="true">
-				GRANT SELECT ON i2b2 to  i2b2demodata ;
-				GRANT SELECT ON labs to  i2b2demodata ;
-				GRANT SELECT ON schemes to  i2b2demodata ;
-				GRANT SELECT ON table_access to  i2b2demodata ;
-			</sql>
-	</target>
 
 </project>
 
